k8s/backend-register.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-register-deployment
  labels:
    app: backend-register
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-register
  template:
    metadata:
      labels:
        app: backend-register
    spec:
      containers:
        - name: backend-register
          image: jtiradoxxx/backend-register:latest
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: backend-register-service
  
spec:
  selector:
    app: backend-register
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
