k8s/ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: register-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - http:
        paths:
          - path: /?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: frontend-register-service
                port:
                  number: 80
          - path: /register/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: backend-register-service
                port:
                  number: 8081
